[tool.poetry]
name = "nounifyy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.30.0"
cairosvg = "^2.7.1"
face-recognition = {git = "https://github.com/thetoby9944/face_recognition.git"}
streamlit-drawable-canvas = "0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
